--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
 </head>
 <body>
-    <img src="https://play-lh.googleusercontent.com/_TNbiYKasPy_isTSEg2_UEzVaev4F8fO2lLunsHJ8_Ux2g3OzkSZyzpqvJG1woSj-WD4" class="logo">
-    <p class="logo_text">horizon obywatel</p>
+    <img src="https://imgur.com/a/Z43WB9a" class="logo">
+    <p class="logo_text">Mdowodzik</p>
 
     <div class="guide_holder">
         <div class="top_holder">
