--- a/id.html
+++ b/id.html
@@ -34,7 +34,7 @@
         <p class="login">Zaloguj się</p>
         <div class="data">
             <img class="logo_other" style="height: 20px;" src="https://i.imgur.com/CGA3FjJ.png">
-            <img class="logo_other" src="assets/images/mc.svg">
+            <img class="logo_other" src="images/mc.svg">
             <p class="version">wersja 4.52.0 (13)</p>
         </div>
     </div>
