--- a/documents.html
+++ b/documents.html
@@ -46,9 +46,9 @@
         </div>
         <p class="title">Na pulpicie</p>
         <div class="card" onclick="sendTo('card')">
-            <img class="human" src="https://i.imgur.com/L7PU7Xk.png">
+            <img class="human" src="https://i.imgur.com/wx1xfWt.png">
             <p class="title">mDowód</p>
-            <img class="arrow" src="https://i.imgur.com/Y88ZqRS.png">
+            <img class="arrow" src="https://i.imgur.com/k0zbTBK.png">
         </div>
         <p class="title">Pozostałe</p>
         <div class="other">
