--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <a class="go">wejdź</a>
     <div class="discord" onclick="window.open('https://discord.gg/2YyKxGpRDN')">
         <div class="inner_grid">
-            <img class="discord_image" src="https://i.imgur.com/eie0S0W.png">
+            <img class="discord_image" src="https://i.imgur.com/xcYtB71.png">
             <p class="discord_text">Dołącz do naszego discorda</p>
         </div>
     </div>
