Refactor input fields and error messages in index.html
Updated user input fields and error messages in the form.

--- a/index.html
+++ b/index.html
@@ -36,26 +36,26 @@
         <div class="upload_uploading"></div>
         <div class="upload_grid">
             <img class="upload_image" src="https://i.imgur.com/1lerane.png">
-            <p class="upload_text">Dodaj zdjęcie</p>
+            <p class="upload_text">https://i.imgur.com/KFLEigX.jpeg</p>
         </div>
     </div>
 
     <div class="input_holder">
         <input type="text" id="name" class="input" placeholder="">
-        <span class="placeholder">Imię (imiona)</span>
+        <span class="placeholder">Imię (Alicja)</span>
         <p class="error">To pole jest wymagane</p>
     </div>
  
     <div class="input_holder">
         <input type="text" id="surname" class="input" placeholder="">
-        <span class="placeholder">Nazwisko</span>
+        <span class="placeholder">Uptas</span>
         <p class="error">To pole jest wymagane</p>
     </div>
 
     <p class="top_info">Płeć</p>
     <div class="selector_box">
         <div class="selected_grid">
-            <p class="selector_text selected_text">Mężczyzna</p>
+            <p class="selector_text selected_text">Kobieta</p>
             <img class="selected_arrow" src="https://i.imgur.com/m0ouMwx.png">
         </div>
         <div class="option_box">
@@ -69,7 +69,7 @@
     </div>
 
     <div class="date">
-        <p class="top_info">Data urodzenia</p>
+        <p class="top_info">23/05/2006</p>
         <div class="date_grid">
             <input class="date_input" placeholder="DD" type="number">
     
@@ -81,62 +81,62 @@
     
             </input>
         </div>
-        <p class="error">Wprowadź prawidłową datę</p>
+        <p class="error">20/12/2025</p>
     </div>
 
     <div class="input_holder">
         <input type="text" id="nationality" class="input" placeholder="">
-        <span class="placeholder">Obywatelstwo</span>
+        <span class="placeholder">Polskie</span>
         <p class="error">To pole jest wymagane</p>
     </div>
 
     <div class="input_holder">
         <input type="text" id="familyName" class="input" placeholder="">
-        <span class="placeholder">Nazwisko rodowe</span>
+        <span class="placeholder">Uptas</span>
         <p class="error">To pole jest wymagane</p>
     </div>
 
     <div class="input_holder">
         <input type="text" id="fathersFamilyName" class="input" placeholder="">
-        <span class="placeholder">Nazwisko rodowe ojca</span>
+        <span class="placeholder">Uptas</span>
         <p class="error">To pole jest wymagane</p>
     </div>
 
     <div class="input_holder">
         <input type="text" id="mothersFamilyName" class="input" placeholder="">
-        <span class="placeholder">Nazwisko rodowe matki</span>
+        <span class="placeholder">Olszewska</span>
         <p class="error">To pole jest wymagane</p>
     </div>
 
-    <p class="subtext">Miejsce zamieszkania</p>
+    <p class="subtext">Złota 26b Piotrków Trybunalskich</p>
 
     <div class="input_holder">
         <input type="text" id="birthPlace" class="input" placeholder="">
-        <span class="placeholder">Miejsce urodzenia</span>
+        <span class="placeholder">Piotrków Trybunalskich</span>
         <p class="error">To pole jest wymagane</p>
     </div>
 
     <div class="input_holder">
         <input type="text" id="countryOfBirth" class="input" placeholder="">
-        <span class="placeholder">Kraj urodzenia</span>
+        <span class="placeholder">Polska</span>
         <p class="error">To pole jest wymagane</p>
     </div>
 
     <div class="input_holder">
         <input type="text" id="adress1" class="input" placeholder="">
-        <span class="placeholder">Ulica i numer domu</span>
+        <span class="placeholder">Złota 26b</span>
         <p class="error">To pole jest wymagane</p>
     </div>
 
     <div class="input_holder">
         <input type="text" id="adress2" class="input" placeholder="">
-        <span class="placeholder">Kod pocztowy</span>
+        <span class="placeholder">97-300</span>
         <p class="error">To pole jest wymagane</p>
     </div>
 
     <div class="input_holder">
         <input type="text" id="city" class="input" placeholder="">
-        <span class="placeholder">Miasto</span>
+        <span class="placeholder">Piotrków Trybunalskich</span>
         <p class="error">To pole jest wymagane</p>
     </div>
 
@@ -151,3 +151,4 @@
     <script src="assets/index.js"></script>
     <script src="assets/manifest.js"></script>
 </body>
+
