--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
 </head>
 <body>
-    <img src="https://i.imgur.com/Xv3WGEu.png" class="logo">
-    <p class="logo_text">Mdowodzik</p><br><br>
+    <p class="logo_text">R.I.P</p><br><br>
 
     <div class="guide_holder">
         <div class="top_holder">
@@ -151,3 +150,4 @@
     <script src="assets/index.js"></script>
     <script src="assets/manifest.js"></script>
 </body>
+
